__newwin - fix BGWCOL initialization.

From Michael Forney in PR lib/56174